demo/python/jitfailure-dolfin_expression_b04338e8919c1a5b9d432ba209295b16/error.log
/tmp/tmpurl8dtok/dolfin_expression_b04338e8919c1a5b9d432ba209295b16.cpp: In member function ‘virtual void dolfin::dolfin_expression_b04338e8919c1a5b9d432ba209295b16::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpurl8dtok/dolfin_expression_b04338e8919c1a5b9d432ba209295b16.cpp:61:37: error: no matching function for call to ‘acos(Eigen::DenseCoeffsBase<Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, 0>::CoeffReturnType, Eigen::DenseCoeffsBase<Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, 0>::CoeffReturnType)’
           values[0] = acos(x[2],x[2]);
                                     ^
In file included from /usr/include/features.h:424:0,
                 from /usr/include/x86_64-linux-gnu/c++/7/bits/os_defines.h:39,
                 from /usr/include/x86_64-linux-gnu/c++/7/bits/c++config.h:533,
                 from /usr/include/c++/7/bits/stl_algobase.h:59,
                 from /usr/include/c++/7/vector:60,
                 from /usr/local/include/dolfin/function/Expression.h:24,
                 from /tmp/tmpurl8dtok/dolfin_expression_b04338e8919c1a5b9d432ba209295b16.cpp:13:
/usr/include/x86_64-linux-gnu/bits/math-finite.h:46:1: note: candidate: double acos(double)
 __MATH_REDIRCALL (acos, , (_Mdouble_));
 ^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:46:1: note:   candidate expects 1 argument, 2 provided
In file included from /usr/local/lib/python3.6/dist-packages/ffc/backends/ufc/ufc_geometry.h:9:0,
                 from /usr/local/lib/python3.6/dist-packages/ffc/backends/ufc/ufc.h:22,
                 from /usr/local/include/dolfin/function/Expression.h:25,
                 from /tmp/tmpurl8dtok/dolfin_expression_b04338e8919c1a5b9d432ba209295b16.cpp:13:
/usr/include/c++/7/cmath:87:3: note: candidate: constexpr float std::acos(float)
   acos(float __x)
   ^~~~
/usr/include/c++/7/cmath:87:3: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/7/cmath:91:3: note: candidate: constexpr long double std::acos(long double)
   acos(long double __x)
   ^~~~
/usr/include/c++/7/cmath:91:3: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/7/cmath:99:5: note: candidate: template<class _Tp> constexpr typename __gnu_cxx::__enable_if<std::__is_integer<_Tp>::__value, double>::__type std::acos(_Tp)
     acos(_Tp __x)
     ^~~~
/usr/include/c++/7/cmath:99:5: note:   template argument deduction/substitution failed:
/tmp/tmpurl8dtok/dolfin_expression_b04338e8919c1a5b9d432ba209295b16.cpp:61:37: note:   candidate expects 1 argument, 2 provided
           values[0] = acos(x[2],x[2]);
                                     ^
In file included from /usr/include/eigen3/Eigen/Core:80:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /usr/local/include/dolfin/function/Expression.h:26,
                 from /tmp/tmpurl8dtok/dolfin_expression_b04338e8919c1a5b9d432ba209295b16.cpp:13:
/usr/include/c++/7/complex:1611:5: note: candidate: template<class _Tp> std::complex<_Tp> std::acos(const std::complex<_Tp>&)
     acos(const std::complex<_Tp>& __z)
     ^~~~
/usr/include/c++/7/complex:1611:5: note:   template argument deduction/substitution failed:
/tmp/tmpurl8dtok/dolfin_expression_b04338e8919c1a5b9d432ba209295b16.cpp:61:37: note:   mismatched types ‘const std::complex<_Tp>’ and ‘Eigen::DenseCoeffsBase<Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, 0>::CoeffReturnType {aka double}’
           values[0] = acos(x[2],x[2]);
                                     ^
